# QuizBot

./: .gitignore  README.md  alembic.ini  pyproject.toml
src/: __main__.py  cli.py  constants.py  logger.py
src/bot/: __init__.py  states.py
src/bot/dialogs/: __init__.py
src/bot/dialogs/main_menu/: __init__.py  getters.py  on_event.py  windows.py
src/bot/dialogs/reg/: __init__.py  getters.py  on_click.py  on_event.py  windows.py
src/bot/handlers/: __init__.py  common.py  errors.py
src/bot/middlewares/: __init__.py  database.py
src/bot/structures/: transfer_data.py
src/bot/utils/: __init__.py  setup_bot.py  setup_dispatcher.py
src/config/: __init__.py  models.py  utils.py
src/db/: database.py  session.py
src/db/models/: __init__.py  base.py  quiz_user.py
src/db/quiz_user/: __init__.py  dal.py  model.py
src/db/repos/: __init__.py  abstract.py  quiz_user.py
