[tool.poetry]
name = "src"
version = "0.1.0"
description = "telegram bot for Obninsk Jobs Exhibition event"
authors = ["WESHOK <gdvarta@gmail.com>"]
readme = "README.md"
package-mode = true

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.10.0"
aiogram-dialog = "^2.1.0"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.32"
alembic = "^1.13.2"
asyncpg = "^0.29.0"
sulguk = "^0.8.0"
asyncclick = "^8.1.7.2"
structlog = "^24.4.0"
pydantic-settings = "^2.4.0"
pyyaml = "^6.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
